# dictionary

./: CMakeLists.txt  readme.md
include/: dictionary.h  dictionaryindex.h  entry.h  entrymodel.h  utils.h
qml/: EntryDelegate.qml  Main.qml
src/: dictionary.cpp  dictionaryindex.cpp  entry.cpp  entrymodel.cpp  main.cpp  utils.cpp
tests/: dictionary_test.cpp  dictionaryindex_test.cpp  misc_test.cpp  testutils.cpp  testutils.h
tests/files/: de_dict_sample  de_dict_sample_sorted  sample  simple_input_1  simple_input_2  unicode_input
